--- a/index.css
+++ b/index.css
@@ -74,13 +74,12 @@ h3 {
   font-size: 20px;
 }
 
-
 .bibtexsection {
-  font-family: "Courier",monospace;
-  font-size:16px;
-  white-space:pre-line;
+  font-family: "Courier", monospace;
+  font-size: 16px;
+  white-space: pre-line;
   background-color: #f4f4f4;
-  text-align:left;
+  text-align: left;
 }
 
 @media (min-width: 576px) {
@@ -141,6 +140,11 @@ hr {
   overflow: hidden;
   border-style: inset;
   border-width: 1px;
+}
+.short {
+  text-align: left;
+  margin-left: 0px;
+  width: 35%;
 }
 
 .btn-group > .btn-group:not(:last-child) > .btn,
@@ -244,10 +248,6 @@ hr {
 
 footer {
   padding: 10px 0;
-  background-color: #e9ecef;
-  font-size: 10px;
-  width: 100%
-  box-sizing: border-box;
 }
 .authors {
   font-size: 20px;
@@ -356,6 +356,58 @@ footer {
   padding-left: 15px;
 }
 
+table {
+  width: 100%;
+  border: 1.5px solid #444444;
+  border-collapse: collapse;
+}
+th,
+td {
+  border: 1.5px solid #444444;
+}
+th {
+  background-color: #dfdfdf;
+}
+.graph {
+  display: grid;
+  grid-template-columns: 1fr 20px 1fr;
+}
+
+.tb1 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  margin: 10px;
+}
+
+.tb2 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  margin: 10px;
+}
+
+.line {
+  border: 0.5px solid rgb(210, 206, 206);
+  width: 0.1px;
+  height: 100%;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  margin-left: 50%;
+}
+
+.tb3 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  margin: 10px;
+}
+
 .form-control:disabled,
 .form-control[readonly] {
   background-color: #e9ecef;
@@ -380,7 +432,7 @@ textarea {
 }
 textarea {
   writing-mode: horizontal-tb !important;
-  font-style: ;
+  /* font-style: ;
   font-variant-ligatures: ;
   font-variant-caps: ;
   font-variant-numeric: ;
@@ -393,7 +445,7 @@ textarea {
   font-optical-sizing: ;
   font-kerning: ;
   font-feature-settings: ;
-  font-variation-settings: ;
+  font-variation-settings: ; */
   text-rendering: auto;
   color: fieldtext;
   letter-spacing: normal;
